Modified the DB to include GUEST_NAME column in TICKET table. Updated TicketListView.java to include guestName on tickets.

--- a/floreantpos/src/messages.properties
+++ b/floreantpos/src/messages.properties
@@ -233,6 +233,7 @@ PosMessage.306=SERVER TIPS REPORT
 PosMessage.307=Database connection error, please configure your database
 PosMessage.308=New menu category
 PosMessage.309=Percentage
+PosMessage.312=Guest Name
 PosMessage.31=Shifts
 PosMessage.310=Invalid number
 PosMessage.311=COOKING INSTRUCTIONS
