Created new class textInputDialog to allow the waiter to enter a guest's name on the terminal if the user is not utilizing the mobile app.

--- a/floreantpos/src/messages.properties
+++ b/floreantpos/src/messages.properties
@@ -344,6 +344,7 @@ Switchboard.32=SETTLE
 Switchboard.33=PRINT
 Switchboard.34=TAKE OUT
 Switchboard.35=PAY OUT
+Switchboard.37=Please enter guest name.
 Switchboard.4=You
 Switchboard.5=You must select two or more ticket for group settle
 Switchboard.6=Please select a ticket from the open ticket list.
