Database test complete. Can connect to php script which connects to Derby.

--- a/floreantpos/FloreantAndroid/res/values/strings.xml
+++ b/floreantpos/FloreantAndroid/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="EnterTableHere">Enter Table Num Here</string>
     <string name="EnterPinHere">Enter Pin Here</string>
     <string name="viewmenu">View Menu</string>
+    <string name="beverages">Beverages</string>
 </resources>
