--- a/floreantpos/FloreantAndroid/res/values/strings.xml
+++ b/floreantpos/FloreantAndroid/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="NickName">Nickname:</string>
     <string name="viewbillh">View/Settle Bill</string>
     <string name="viewbill">View/Settle Bill</string>
+    <string name="personalbill">Personal Bill</string>
+    <string name="groupbill">Group Bill</string>
+    <string name="tablemembers">Table Members:</string>
+    <string name="total">Total</string>
 </resources>
